# rv_control_lvgl

./: LICENSE  README.md  build.gradle  settings.gradle  获取支持SSL的libcurl说明.md
app/: build.gradle
app/src/androidTest/java/com/hybird/lvgl/android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  camera_bridge.cpp  lv_conf.h  lv_tick_custom.c  lvgl-entrance.cpp  lvgl.h  serial_port.c  serial_port.h  ui.cpp  ui.h
app/src/main/cpp/rv_control/: CMakeLists.txt  backlight.c  config.h  filelist.txt  project.info  ui.c  ui.h  ui.ini  ui_common.c  ui_events.h  ui_helpers.c  ui_helpers.h
app/src/main/cpp/rv_control/components/: ui_comp.c  ui_comp.h  ui_comp_alarm_comp.c  ui_comp_alarm_comp.h  ui_comp_clock_dot.c  ui_comp_clock_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_scrolldots.c  ui_comp_scrolldots.h  ui_comp_small_label.c  ui_comp_small_label.h
app/src/main/cpp/rv_control/fonts/: ui_font_Number_digital7.c
app/src/main/cpp/rv_control/images/: ui_img_album_png.c  ui_img_avatar_png.c  ui_img_backward_png.c  ui_img_balance_sel_png.c  ui_img_balance_unsel_png.c  ui_img_camera_sel_png.c  ui_img_camera_unsel_png.c  ui_img_charger_sel_png.c  ui_img_charger_unsel_png.c  ui_img_chatbox2_png.c  ui_img_chatbox_png.c  ui_img_clock_hour_png.c  ui_img_clock_min_png.c  ui_img_clock_sec_png.c  ui_img_cloud_png.c  ui_img_device_sel_png.c  ui_img_device_unsel_png.c  ui_img_forward_png.c  ui_img_homepage_sel_png.c  ui_img_homepage_unsel_png.c  ui_img_humidity_icon_png.c  ui_img_inside_sel_png.c  ui_img_inside_unsel_png.c  ui_img_light_sel_png.c  ui_img_light_unsel_png.c  ui_img_outside_sel_png.c  ui_img_outside_unsel_png.c  ui_img_pattern_png.c  ui_img_phone_png.c  ui_img_play_png.c  ui_img_setting_sel_png.c  ui_img_setting_unsel_png.c  ui_img_sls_logo_png.c  ui_img_switch_off_png.c  ui_img_switch_on_png.c  ui_img_temp_icon_png.c  ui_img_water_box_sel_png.c  ui_img_water_box_unsel_png.c  ui_img_weather_1_png.c  ui_img_weather_2_png.c  (+1 more)
app/src/main/cpp/rv_control/screens/: ui_Alarm.c  ui_Call.c  ui_Chat.c  ui_Clock.c  ui_Music_Player.c  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_Screen4.c  ui_Screen4.h  ui_Screen5.c  ui_Screen5.h  ui_Screen6.c  ui_Screen6.h  ui_Screen7.c  ui_Screen7.h  ui_Screen8.c  ui_Screen8.h  ui_Splash.c  ui_Weather.c
app/src/main/java/com/hybird/lvgl/android/: MainActivity.java
app/src/main/java/com/hybird/lvgl/android/lvgl/: LVGLEntrance.java  LVGLHolderCallback.java  LVGLSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hybird/lvgl/android/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
